coca instagram fetch command

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -3,3 +3,5 @@ services:
         class: AppBundle\Twitter\TwitterReader
         arguments:
             - %twitter.tag%
+    pimterest.reader.instagram:
+        class: AppBundle\Service\InstagramReader
