rhum create contribution entity

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -10,3 +10,5 @@ services:
             - %instagram.api_key%
             - %instagram.api_secret%
             - %instagram.api_callback%
+    pimterest.repository.contribution:
+        class: AppBundle\Repository\ContributionRepository
