--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 map_index:
     path: /map
     defaults: { _controller: AppBundle:Map:index }
+
+locations_index:
+    path: /rest/locations
+    defaults: { _controller: AppBundle:Rest/Locations:list, _format: json }
