ricard save instagram

--- a/src/AppBundle/Resources/config/doctrine/Contribution.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Contribution.orm.yml
@@ -34,7 +34,9 @@ AppBundle\Entity\Contribution:
         latitude:
             type: string
             length: 255
+            nullable: true
         longitude:
             type: string
             length: 255
+            nullable: true
     lifecycleCallbacks: {  }
