moscow mule : add admin CRUD

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "j7mbo/twitter-api-php": "dev-master",
-        "cosenary/instagram": "dev-master"
+        "cosenary/instagram": "dev-master",
+        "knplabs/knp-paginator-bundle": "^2.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
