--- a/src/AppBundle/Resources/config/doctrine/Contribution.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Contribution.orm.yml
@@ -35,11 +35,9 @@ AppBundle\Entity\Contribution:
             type: string
             length: '1024'
         latitude:
-            type: string
-            length: 255
+            type: float
             nullable: true
         longitude:
-            type: string
-            length: 255
+            type: float
             nullable: true
     lifecycleCallbacks: {  }
