--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -10,6 +10,14 @@ admin_index:
     path: /admin
     defaults: { _controller: AppBundle:Admin:index }
 
+admin_edit:
+    path: /admin/edit/{id}
+    defaults: { _controller: AppBundle:Admin:edit, id: null }
+
+admin_delete:
+    path: /admin/delete/{id}
+    defaults: { _controller: AppBundle:Admin:delete, id: null }
+
 upload_rest_upload:
     path: /rest/upload
     defaults: { _controller: AppBundle:Rest/Upload:upload, _format: json }
